--- a/persistence/src/main/resources/db/changelog/v1.0/data/20240305-1-load-data-city.yaml
+++ b/persistence/src/main/resources/db/changelog/v1.0/data/20240305-1-load-data-city.yaml
@@ -24,7 +24,7 @@ databaseChangeLog:
               - column:
                   header: parent_article_id
                   name: parent_article_id
-                  type: null
+                  type: int(10)
             encoding: UTF-8
             file: db/changelog/v1.0/data/homepage.csv
             separator: ','
