Добавлен CRUD для пользователя

--- a/persistence/src/main/resources/db/changelog/v1.0/data/20240305-1-load-data-articles.yaml
+++ b/persistence/src/main/resources/db/changelog/v1.0/data/20240305-1-load-data-articles.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 20240305-1-load-data-city
+      id: 20240305-1-load-data-articles
       author: Emiryan Vladimir
       changes:
         - loadData:
