--- a/persistence/src/main/resources/db/changelog/v1.0/tables/20240226-1-create-table-user.yaml
+++ b/persistence/src/main/resources/db/changelog/v1.0/tables/20240226-1-create-table-user.yaml
@@ -22,3 +22,8 @@ databaseChangeLog:
                   type: varchar(255)
                   constraints:
                     nullable: false
+              - column:
+                  name: role
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
