--- a/persistence/src/main/resources/db/changelog/v1.0/tables/20240226-1-create-table-article.yaml
+++ b/persistence/src/main/resources/db/changelog/v1.0/tables/20240226-1-create-table-article.yaml
@@ -33,6 +33,11 @@ databaseChangeLog:
                   constraints:
                     nullable: true
               - column:
+                  name: date
+                  type: date
+                  constraints:
+                    nullable: false
+              - column:
                   name: parent_article_id
                   type: int(10)
                   constraints:
