Реализовано создание главной страницы с созданием пользователя

--- a/persistence/src/main/resources/db/changelog/v1.0/db.changelog-cumulative.yaml
+++ b/persistence/src/main/resources/db/changelog/v1.0/db.changelog-cumulative.yaml
@@ -1,5 +1,5 @@
 databaseChangeLog:
   - includeAll:
       path: db/changelog/v1.0/tables
-  - includeAll:
-      path: db/changelog/v1.0/data
+#  - includeAll:
+#      path: db/changelog/v1.0/data
