--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
   persistence:
     build:
-      context: ./persistence
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: /persistence/Dockerfile
     depends_on:
       - db
     environment:
@@ -13,8 +13,8 @@ services:
       - DB_PASSWORD=postgres
   webapp:
     build:
-      context: ./webapp
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: /webapp/Dockerfile
     ports:
       - "8080:8080"
     depends_on:
@@ -24,7 +24,7 @@ services:
       - PERSISTENCE_API=http://persistence:8081
   db:
     image: postgres
-    restart: on-failure
+    restart: no
     environment:
       - POSTGRES_DB=weeky
       - POSTGRES_USER=postgres
