--- a/persistence/Dockerfile
+++ b/persistence/Dockerfile
@@ -1,19 +1,17 @@
-FROM gradle:jdk17 as builder
+FROM gradle:jdk17 AS builder
 
 WORKDIR /app
 
-COPY build.gradle.kts settings.gradle.kts /app/
+COPY . .
 
-COPY src /app/src/
-
-RUN gradle build
+RUN gradle :persistence:bootJar
 
 FROM eclipse-temurin:17-jre-alpine
 
 WORKDIR /app
 
-COPY --from=builder /app/build/libs/persistence-0.0.1-SNAPSHOT.jar /app/
+COPY --from=builder /app/build/libs/persistence-0.0.1-SNAPSHOT.jar /app/persistence.jar
 
-CMD ["java", "-jar", "/app/persistence-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "/app/persistence.jar"]
 
 EXPOSE 8080
