--- a/persistence/Dockerfile
+++ b/persistence/Dockerfile
@@ -4,14 +4,14 @@ WORKDIR /app
 
 COPY . .
 
-RUN gradle :persistence:bootJar
+RUN gradle build
 
 FROM eclipse-temurin:17-jre-alpine
 
 WORKDIR /app
 
-COPY --from=builder /app/build/libs/persistence-0.0.1-SNAPSHOT.jar /app/persistence.jar
+COPY --from=builder /app/persistence/build/libs/persistence-0.0.1-SNAPSHOT.jar /app/
 
-CMD ["java", "-jar", "/app/persistence.jar"]
+CMD ["java", "-jar", "/app/persistence-0.0.1-SNAPSHOT.jar"]
 
-EXPOSE 8080
+EXPOSE 8081
