--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,10 +1,8 @@
-FROM gradle:jdk17 as builder
+FROM gradle:jdk17 AS builder
 
 WORKDIR /app
 
-COPY build.gradle.kts settings.gradle.kts /app/
-
-COPY src /app/src/
+COPY . .
 
 RUN gradle build
 
@@ -12,7 +10,7 @@ FROM eclipse-temurin:17-jre-alpine
 
 WORKDIR /app
 
-COPY --from=builder /app/build/libs/webapp-0.0.1-SNAPSHOT.jar /app/
+COPY --from=builder /app/webapp/build/libs/webapp-0.0.1-SNAPSHOT.jar /app/
 
 CMD ["java", "-jar", "/app/webapp-0.0.1-SNAPSHOT.jar"]
 
