--- a/persistence/src/main/resources/application-dev.yaml
+++ b/persistence/src/main/resources/application-dev.yaml
@@ -1,4 +1,3 @@
-url: http://localhost:8081
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/weeky
@@ -10,3 +9,4 @@ spring:
     open-in-view: false
 server:
   port: 8081
+ping-url: http://localhost:8081
