--- a/webapp/src/main/resources/application-dev.yaml
+++ b/webapp/src/main/resources/application-dev.yaml
@@ -1,5 +1,5 @@
-url: http://localhost:8080
 api:
   article: http://localhost:8081/article
   user: http://localhost:8081/user
 home-segment: home
+ping-url: http://localhost:8080
